--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -760,7 +760,7 @@ p {
 .form-control {
     display: block;
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem .60rem;
     font-size: inherit;
     font-weight: inherit;
     color: var(--text-main-color);
@@ -779,7 +779,6 @@ p {
     width: 100%;
     padding: 0.5rem 2.5rem 0.5rem 1rem;
     -moz-padding-start: calc(1rem - 3px);
-    font-size: 0.8rem;
     font-weight: 600;
     line-height: 1.49;
     color: var(--bs-gray-500);
@@ -808,7 +807,6 @@ p {
     --btn-font-family: ;
     --btn-font-size: 0.8rem;
     --btn-font-weight: 700;
-    --btn-line-height: 1.2;
     --btn-border-width: 1px;
     --btn-border-radius: 0.375rem;
     --btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0), 0 1px 1px rgba(0, 0, 0, 0);
