PF-150 Updated htmls headers

--- a/app/templates/accounts/login.html
+++ b/app/templates/accounts/login.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
-{% block title %} Sign IN {% endblock %} 
+{% block title %} Login {% endblock %} 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <link type="text/css" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
