--- a/app/templates/home/report.html
+++ b/app/templates/home/report.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
-{% block title %} Azure {% endblock %} 
+{% block title %} Report {% endblock %} 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <!-- <link type="text/css" href="/static/assets/css/pixel.css" rel="stylesheet"> -->
