--- a/app/templates/home/template.html
+++ b/app/templates/home/template.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
-{% block title %} Template page {% endblock %} 
+{% block title %} Template {% endblock %} 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <!-- <link type="text/css" href="/static/assets/css/pixel.css" rel="stylesheet"> -->
