PF-150 Updated NFR html

--- a/app/templates/home/nfr.html
+++ b/app/templates/home/nfr.html
@@ -41,9 +41,10 @@
                                     </div>
                                     <div class="nfr-col-l padding-10">
                                         <label class="col-form-nfr-label">Scope:</label>
-                                        <label class="col-form-nfr-description">You can define the scope to which the NFRs check will be applied.
-                                                each: calculates metrics for each request.
-                                                Also you can specify request/transaction name.
+                                        <label class="col-form-nfr-description">The scope for applying NFRs checks can be defined in the following ways:
+                                            - each: Calculates metrics for each request.
+                                            - Specify the full request or transaction name.
+                                            - Use regular expressions (regex) to match multiple requests or transactions (R_.*)
                                         </label>
                                     </div>
                                     <div class="nfr-col-m padding-10">
