--- a/app/templates/integrations/ai-support.html
+++ b/app/templates/integrations/ai-support.html
@@ -43,10 +43,10 @@
                                         <label for="api_version" class="mt-2" style="display: block; text-align: center;">Api version:</label>
                                         {{ form.api_version(class="form-control", id="api_version") }}
                                       </div>
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="Please note that for Gemini, the 'gemini-pro' model has been tested, and for ChatGPT, the 'gpt-4-turbo' & 'gpt-4o' model has been tested."></span>
+                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="Please note that for ChatGPT, the 'gpt-4-turbo' & 'gpt-4o' and for Gemini, the 'gemini-1.5-flash' models have been tested."></span>
                                     <label for="ai_text_model" class="input-label mt-2">AI Text model:</label>
                                     {{ form.ai_text_model(class="form-control") }}
-                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="Please note that for Gemini, the 'gemini-pro-vision' model has been tested, and for ChatGPT, the 'gpt-4-turbo' & 'gpt-4o' model has been tested."></span>
+                                    <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="Please note that for ChatGPT, the 'gpt-4-turbo' & 'gpt-4o' and for Gemini, the 'gemini-1.5-flash' models have been tested."></span>
                                     <label for="ai_image_model" class="input-label mt-2">AI Image model:</label>
                                     {{ form.ai_image_model(class="form-control") }}
                                     <span class="fa-regular fa-circle-question me-2 mt-2" data-bs-toggle="tooltip" data-bs-placement="left" title="To hide the token, you can add it to the Secrets page and use it from there as a variable &#123;&#123;secret_example&#125;&#125;."></span>
